--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <nav>
-        <img class="nav-img" src="/images/logo.svg" alt="w en 3D" />
+        <img class="nav-img" src="./images/logo.svg" alt="w en 3D" />
         <ol class="nav-ol">
           <li>Articles</li>
           <li>About</li>
@@ -27,7 +27,7 @@
         <div class="container-avatar">
           <img
             class="div-img-avatar"
-            src="/images/avatar.png"
+            src="./images/avatar.png"
             alt="Avatar d'un homme"
           />
         </div>
@@ -41,7 +41,7 @@
           <div class="cards-responsive">
             <img
               class="img-responsive"
-              src="/images/responsive.png"
+              src="./images/responsive.png"
               alt="Homme assis autour de nombreux écrans"
             />
             <h3>Responsive</h3>
@@ -51,7 +51,7 @@
           <div class="cards-scalable">
             <img
               class="img-scalable"
-              src="/images/scalable.png"
+              src="./images/scalable.png"
               alt="Homme créatif"
             />
             <h4>Scalable</h4>
@@ -61,7 +61,7 @@
           <div class="cards-inclusive">
             <img
               class="img-inclusive"
-              src="/images/inclusive.png"
+              src="./images/inclusive.png"
               alt="Ensemble de mains unies"
             />
             <h5>Inclusive</h5>
